--- a/scraper/pyproject.toml
+++ b/scraper/pyproject.toml
@@ -15,6 +15,8 @@ google-auth = "^2.37.0"
 flask = "^3.1.0"
 google-cloud-firestore = "^2.19.0"
 webdriver-manager = "^4.0.2"
+google-cloud-aiplatform = "^1.75.0"
+python-dotenv = "^1.0.1"
 
 
 [tool.poetry.group.dev.dependencies]
