--- a/restaurant-app/package.json
+++ b/restaurant-app/package.json
@@ -15,7 +15,8 @@
     "lucide-react": "^0.468.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-modal": "^3.16.3"
+    "react-modal": "^3.16.3",
+    "react-router-dom": "^7.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
